--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <p>Hello</p>
     <div>
         <img src="../assets/images/other/Under-Construction-Sign-for-Locator.png" alt="">
     </div>
