DOCS: Organize workplace

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,20 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello</p>
-    <div>
-        <img src="../assets/images/other/Under-Construction-Sign-for-Locator.png" alt="">
-    </div>
-
-
-
-
-
-
-
-
-
-
+    <header>
+        <img class="headerLogo" src="../assets/images/logo_no_txt.svg" alt="Logo">
+    </header>
+    <main>
+        <p>main</p>
+    </main>
+    <footer>
+        <p>footer</p>
+    </footer>
 
     <script src="../assets/scripts/script.js"></script>
 </body>
