DOCS: Updated page layout

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,15 +9,29 @@
 </head>
 <body>
     <header>
-        <img class="headerLogo" src="../assets/images/logo_no_txt.svg" alt="Logo">
+        <div class="container">
+            <img class="logo" src="../assets/images/logo_no_txt.svg" alt="Logo">
+        </div>
     </header>
     <main>
-        <p>main</p>
+        <div class="container">
+            <!-- <img class="main_bg" src="../assets/images/main_bachground.jpg" alt=""> -->
+        </div>
     </main>
-    <footer>
-        <p>footer</p>
-    </footer>
+    <div class="delete">
 
+    </div>
+    <footer>
+        <div class="container">
+            <div class="upper">
+                FB Instagram Youtbe Patreon
+            </div>
+            <div class="lower">
+                <p> 2024 პრაქტიკული სროლა by msvanidze </p>
+            </div>
+
+        </div>
+    </footer>
     <script src="../assets/scripts/script.js"></script>
 </body>
 </html>
