DOCS: Working on header

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,13 +9,20 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <img class="logo" src="../assets/images/logo_no_txt.svg" alt="Logo">
+        <div class="container display_flex">
+            <div class="left display_flex">
+                <img class="logo" src="../assets/images/logo_no_txt.svg" alt="Logo">
+                <p>პრაქტიკული სროლა</p>
+            </div>
+            <div class="right display_flex">
+
+            </div>
+
         </div>
     </header>
     <main>
         <div class="container">
-            <!-- <img class="main_bg" src="../assets/images/main_bachground.jpg" alt=""> -->
+
         </div>
     </main>
     <div class="delete">
