DOCS: Starting Building Carusel

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,27 @@
     </header>
     <main>
         <div class="container">
-
+            <!-- carisel start -->
+            <div class="carousel-container">
+                <div class="carousel_items">
+                  <div class="carousel_item item1">
+                    <p class="carousel_text">Image 1</p>
+                  </div>
+                  <div class="carousel_item item2">
+                    <p class="carousel_text">Image 2</p>
+                  </div>
+                  <div class="carousel_item item3">
+                    <p class="carousel_text">Image 3</p>
+                  </div>
+                  <div class="carousel_item item4">
+                    <p class="carousel_text">Image 4</p>
+                  </div>
+                  <div class="carousel_item item5">
+                    <p class="carousel_text">Image 5</p>
+                </div>
+              </div>
+            </div>
+            <!-- carusel END -->
         </div>
     </main>
     <div class="delete">
@@ -40,5 +60,6 @@
         </div>
     </footer>
     <script src="../assets/scripts/script.js"></script>
+    <script src="../assets/scripts/carousel.js"></script>
 </body>
 </html>
