--- a/pages/index.html
+++ b/pages/index.html
@@ -17,36 +17,31 @@
             <div class="right display_flex">
 
             </div>
-
         </div>
     </header>
     <main>
-        <div class="container">
-            <!-- carisel start -->
-            <div class="carousel-container">
-                <div class="carousel_items">
-                  <div class="carousel_item item1">
-                    <p class="carousel_text">Image 1</p>
-                  </div>
-                  <div class="carousel_item item2">
-                    <p class="carousel_text">Image 2</p>
-                  </div>
-                  <div class="carousel_item item3">
-                    <p class="carousel_text">Image 3</p>
-                  </div>
-                  <div class="carousel_item item4">
-                    <p class="carousel_text">Image 4</p>
-                  </div>
-                  <div class="carousel_item item5">
-                    <p class="carousel_text">Image 5</p>
-                </div>
-              </div>
-            </div>
-            <!-- carusel END -->
+      <div class="carousel-container"> <!-- შეიძლება წავშალო კონტეინერი -->
+        <div class="carousel_items">
+          <div class="carousel_item item1">
+            <!-- <p class="carousel_text">იუთუბ არხი</p> -->
+          </div>
+          <div class="carousel_item item2">
+            <!-- <p class="carousel_text">შეჯიბრი</p> -->
+          </div>
+          <div class="carousel_item item3">
+            <!-- <p class="carousel_text">კურსი</p> -->
+          </div>
+          <div class="carousel_item item4">
+            <!-- <p class="carousel_text">Image 4</p> -->
+          </div>
+          <div class="carousel_item item5">
+            <!-- <p class="carousel_text">Image 5</p> -->
+          </div>
         </div>
+      </div>
+      <!-- carusel END -->
     </main>
     <div class="delete">
-
     </div>
     <footer>
         <div class="container">
@@ -56,7 +51,6 @@
             <div class="lower">
                 <p> 2024 პრაქტიკული სროლა by msvanidze </p>
             </div>
-
         </div>
     </footer>
     <script src="../assets/scripts/script.js"></script>
