DOCS: working on Header (right)

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="icon" href="../assets/images/logo_no_txt.svg">
     <link rel="stylesheet" href="../assets/styles/style.css">
     <title>Document</title>
 </head>
@@ -15,7 +16,16 @@
                 <p>პრაქტიკული სროლა</p>
             </div>
             <div class="right display_flex">
-
+              <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item"><a class="nav__link" href="#">ორგანიზაცია</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">შეჯიბრი</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">კურსი</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">გალერეა</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">კონტაქტი</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">ქა</a></li>
+                </ul>
+            </nav>
             </div>
         </div>
     </header>
