DOCS: from CSS to SCSS

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="icon" href="../assets/images/logo_no_txt.svg">
-    <link rel="stylesheet" href="../assets/styles/style.css">
+    <link rel="stylesheet" href="../assets/styles/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container display_flex">
             <div class="left display_flex">
                 <img class="logo" src="../assets/images/logo_no_txt.svg" alt="Logo">
@@ -29,8 +29,8 @@
             </div>
         </div>
     </header>
-    <main>
-      <div class="carousel-container"> <!-- შეიძლება წავშალო კონტეინერი -->
+    <main class="main">
+      <div class="carousel-container">
         <div class="carousel_items">
           <div class="carousel_item item1">
             <!-- <p class="carousel_text">იუთუბ არხი</p> -->
