--- a/pages/index.html
+++ b/pages/index.html
@@ -6,21 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="icon" href="../assets/images/logo_no_txt.svg">
     <link rel="stylesheet" href="../assets/styles/styles.css">
-    <title>Document</title>
+    <title>პრაქტიკული სროლა</title>
 </head>
 <body>
     <header class="header">
         <div class="container display_flex">
             <div class="left display_flex">
                 <img class="logo" src="../assets/images/logo_no_txt.svg" alt="Logo">
-                <p>პრაქტიკული სროლა</p>
+                <h1>პრაქტიკული სროლა</h1>
             </div>
             <div class="right display_flex">
               <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a class="nav__link" href="#">ორგანიზაცია</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">შეჯიბრი</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">კურსი</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">საქმიანობა</a></li>
                     <li class="nav__item"><a class="nav__link" href="#">გალერეა</a></li>
                     <li class="nav__item"><a class="nav__link" href="#">კონტაქტი</a></li>
                     <li class="nav__item"><a class="nav__link" href="#">ქა</a></li>
@@ -33,26 +32,36 @@
       <div class="carousel-container">
         <div class="carousel_items">
           <div class="carousel_item item1">
-            <!-- <p class="carousel_text">იუთუბ არხი</p> -->
+            <h2 class="carousel_text">პრაქტიკული სროლა</h2>
+            <p class="carousel_text">ორგანიზაცია</p>
           </div>
           <div class="carousel_item item2">
-            <!-- <p class="carousel_text">შეჯიბრი</p> -->
+            <h2 class="carousel_text">პრაქტიკული კარაბინი</h2>
+            <p class="carousel_text">შეჯიბრი</p>
           </div>
           <div class="carousel_item item3">
-            <!-- <p class="carousel_text">კურსი</p> -->
+            <h2 class="carousel_text">საბაზისო კარაბინი</h2>
+            <p class="carousel_text">სასწავლო კურსი</p>
           </div>
           <div class="carousel_item item4">
-            <!-- <p class="carousel_text">Image 4</p> -->
-          </div>
-          <div class="carousel_item item5">
-            <!-- <p class="carousel_text">Image 5</p> -->
+            <h2 class="carousel_text">პრაქტიკული სროლა</h2>
+            <p class="carousel_text">საგანმანათლებლო იუთუბ არხი</p>
           </div>
         </div>
       </div>
-      <!-- carusel END -->
     </main>
-    <div class="delete">
-    </div>
+    <section class="about">
+
+    </section>
+    <section class="activity">
+
+    </section>
+    <section class="gallery">
+
+    </section>
+    <section class="partners delete">
+
+    </section>
     <footer>
         <div class="container">
             <div class="upper">
