--- a/pages/index.html
+++ b/pages/index.html
@@ -54,13 +54,19 @@
 
     </section>
     <section class="activity">
+      <div class="container">
 
+      </div>
     </section>
     <section class="gallery">
+      <div class="container">
 
+      </div>
     </section>
-    <section class="partners delete">
+    <section class="partners">
+      <div class="container delete">
 
+      </div>
     </section>
     <footer>
         <div class="container">
