DOCS: Updating/styling Header

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,9 +22,11 @@
                     <li class="nav__item"><a class="nav__link" href="#">საქმიანობა</a></li>
                     <li class="nav__item"><a class="nav__link" href="#">გალერეა</a></li>
                     <li class="nav__item"><a class="nav__link" href="#">კონტაქტი</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">ქა</a></li>
                 </ul>
-            </nav>
+                <div class="language">
+                  <a href="#"><img class="language_change" src="../assets/images/Flag_of_Georgia.svg" alt="flag"></a>
+                </div>
+              </nav>
             </div>
         </div>
     </header>
