DOCS: Navigation & Main - Demo Done

--- a/pages/index.html
+++ b/pages/index.html
@@ -34,20 +34,28 @@
       <div class="carousel-container">
         <div class="carousel_items">
           <div class="carousel_item item1">
-            <h2 class="carousel_text">პრაქტიკული სროლა</h2>
-            <p class="carousel_text">ორგანიზაცია</p>
+            <!-- <div class="text_location display_flex">
+              <h2 class="carousel_text">პრაქტიკული სროლა</h2>
+              <p class="carousel_text">ორგანიზაცია</p>
+            </div> -->
           </div>
           <div class="carousel_item item2">
-            <h2 class="carousel_text">პრაქტიკული კარაბინი</h2>
-            <p class="carousel_text">შეჯიბრი</p>
+            <div class="text_location display_flex">
+              <h2 class="carousel_text">პრაქტიკული კარაბინი</h2>
+              <p class="carousel_text">შეჯიბრი</p>
+            </div>
           </div>
           <div class="carousel_item item3">
-            <h2 class="carousel_text">საბაზისო კარაბინი</h2>
-            <p class="carousel_text">სასწავლო კურსი</p>
+            <div class="text_location display_flex">
+              <h2 class="carousel_text">საბაზისო კარაბინი</h2>
+              <p class="carousel_text">სასწავლო კურსი</p>
+            </div>
           </div>
           <div class="carousel_item item4">
-            <h2 class="carousel_text">პრაქტიკული სროლა</h2>
-            <p class="carousel_text">საგანმანათლებლო იუთუბ არხი</p>
+            <div class="text_location display_flex">
+              <h2 class="carousel_text">პრაქტიკული სროლა</h2>
+              <p class="carousel_text">საგანმანათლებლო იუთუბ არხი</p>
+            </div>
           </div>
         </div>
       </div>
