DOCS: Navigation & Main - Demo Done

--- a/pages/index.html
+++ b/pages/index.html
@@ -36,25 +36,25 @@
           <div class="carousel_item item1">
             <!-- <div class="text_location display_flex">
               <h2 class="carousel_text">პრაქტიკული სროლა</h2>
-              <p class="carousel_text">ორგანიზაცია</p>
+              <p class="carousel_text txt2">ორგანიზაცია</p>
             </div> -->
           </div>
           <div class="carousel_item item2">
             <div class="text_location display_flex">
               <h2 class="carousel_text">პრაქტიკული კარაბინი</h2>
-              <p class="carousel_text">შეჯიბრი</p>
+              <p class="carousel_text txt2">შეჯიბრი</p>
             </div>
           </div>
           <div class="carousel_item item3">
             <div class="text_location display_flex">
               <h2 class="carousel_text">საბაზისო კარაბინი</h2>
-              <p class="carousel_text">სასწავლო კურსი</p>
+              <p class="carousel_text txt2">სასწავლო კურსი</p>
             </div>
           </div>
           <div class="carousel_item item4">
             <div class="text_location display_flex">
               <h2 class="carousel_text">პრაქტიკული სროლა</h2>
-              <p class="carousel_text">საგანმანათლებლო იუთუბ არხი</p>
+              <p class="carousel_text txt2">საგანმანათლებლო იუთუბ არხი</p>
             </div>
           </div>
         </div>
