DOCS: About section Done

--- a/pages/index.html
+++ b/pages/index.html
@@ -61,11 +61,37 @@
       </div>
     </main>
     <section class="about">
-
+      <div class="container display_flex">
+        <div class="main_text display_flex">
+          <div class="main_tex_left display_flex">
+            <h2>
+              ორგანიზაცია
+            </h2>
+            <p>
+              ჩვენი არხის მიზანია, საქართველოში იარაღის კულტურის წინ წამოწევა და სამოქალაქო მოყვარული მსროლელების წახალისება. ვიდეიოების ძირითადი თემაა, პრაქტიკული სროლის ასპექტების ჩვენება, ვაზნების, იარაღისა და სხვდასხვა აღჭურვილობის ტესტირება.
+              ჩვენი არხის მიზანია, საქართველოში იარაღის კულტურის წინ წამოწევა და სამოქალაქო მოყვარული მსროლელების წახალისება. ვიდეიოების ძირითადი თემაა, პრაქტიკული სროლის ასპექტების ჩვენება, ვაზნების, იარაღისა და სხვდასხვა აღჭურვილობის ტესტირება.
+              ჩვენი არხის მიზანია, საქართველოში იარაღის კულტურის წინ წამოწევა და სამოქალაქო მოყვარული მსროლელების წახალისება. ვიდეიოების ძირითადი თემაა, პრაქტიკული სროლის ასპექტების ჩვენება, ვაზნების, იარაღისა და სხვდასხვა აღჭურვილობის ტესტირება.
+              ჩვენი არხის მიზანია, საქართველოში იარაღის კულტურის წინ წამოწევა და სამოქალაქო მოყვარული მსროლელების წახალისება. ვიდეიოების ძირითადი თემაა, პრაქტიკული სროლის ასპექტების ჩვენება, ვაზნების, იარაღისა და სხვდასხვა აღჭურვილობის ტესტირება.
+              ჩვენი არხის მიზანია, საქართველოში იარაღის კულტურის წინ წამოწევა და სამოქალაქო მოყვარული მსროლელების წახალისება. ვიდეიოების ძირითადი თემაა, პრაქტიკული სროლის ასპექტების ჩვენება, ვაზნების, იარაღისა და სხვდასხვა აღჭურვილობის ტესტირება.
+            </p>
+          </div>
+          <div class="main_tex_right display_flex">
+            <img class="logo_big" src="../assets/images/logo.svg" alt="Logo">
+          </div>
+        </div>
+      </div>
     </section>
     <section class="activity">
-      <div class="container">
+      <div class="container display_flex">
+        <div class="activity_right">
 
+        </div>
+        <div class="activity_center">
+
+        </div>
+        <div class="activity_left">
+
+        </div>
       </div>
     </section>
     <section class="gallery">
