DOCS: Started footer section

--- a/pages/index.html
+++ b/pages/index.html
@@ -84,13 +84,28 @@
     <section class="activity">
       <div class="container display_flex">
         <div class="activity_right">
-
+          <h2>
+            პრაქტიკული კარაბინი
+          </h2>
+          <p>
+            ჩვენი არხის მიზანია, საქართველოში იარაღის კულტურის წინ წამოწევა და სამოქალაქო მოყვარული მსროლელების წახალისება. ვიდეიოების ძირითადი თემაა, პრაქტიკული სროლის ასპექტების ჩვენება, ვაზნების, იარაღისა და სხვდასხვა აღჭურვილობის ტესტირება.
+          </p>
         </div>
         <div class="activity_center">
-
+          <h2>
+            საბაზისო კარაბინი
+          </h2>
+          <p>
+            ჩვენი არხის მიზანია, საქართველოში იარაღის კულტურის წინ წამოწევა და სამოქალაქო მოყვარული მსროლელების წახალისება. ვიდეიოების ძირითადი თემაა, პრაქტიკული სროლის ასპექტების ჩვენება, ვაზნების, იარაღისა და სხვდასხვა აღჭურვილობის ტესტირება.
+          </p>
         </div>
         <div class="activity_left">
-
+          <h2>
+            პრაქტიკული სროლა
+          </h2>
+          <p>
+            ჩვენი არხის მიზანია, საქართველოში იარაღის კულტურის წინ წამოწევა და სამოქალაქო მოყვარული მსროლელების წახალისება. ვიდეიოების ძირითადი თემაა, პრაქტიკული სროლის ასპექტების ჩვენება, ვაზნების, იარაღისა და სხვდასხვა აღჭურვილობის ტესტირება.
+          </p>
         </div>
       </div>
     </section>
@@ -107,13 +122,26 @@
     <footer>
         <div class="container">
             <div class="upper">
-                FB Instagram Youtbe Patreon
+              <!-- <img class="logo" src="../assets/images/logo_no_txt.svg" alt="Logo"> -->
+              <a href="https://www.youtube.com/@Practical-shooting" target="_blank">
+                <img class="social_icon_settings" src="../assets/images/Social_icons/youtube_icon.svg" alt="youtube_icon">
+              </a>
+              <a href="https://www.facebook.com/PracticalShooting1" target="_blank">
+                <img class="social_icon_settings" src="../assets/images/Social_icons/facebook_icon.svg" alt="facebook_icon">
+              </a>
+              <a href="https://www.instagram.com/practical__shooting/?igsh=eGQ0MncwdHpkY2k5" target="_blank">
+                <img class="social_icon_settings" src="../assets/images/Social_icons/instagram_icon.svg" alt="instagram_icon">
+              </a>
             </div>
             <div class="lower">
                 <p> 2024 პრაქტიკული სროლა by msvanidze </p>
+                <a href="https://github.com/msvanidze" target="_blank">
+                  <img class="social_icon_settings" src="../assets/images/Social_icons/github_icon.svg" alt="github_icon">
+                </a>
             </div>
         </div>
     </footer>
+
     <script src="../assets/scripts/script.js"></script>
     <script src="../assets/scripts/carousel.js"></script>
 </body>
